Simple Zen Travel V2.4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,10 @@ img {
     display: block;
 }
 
+img[width][height] {
+    aspect-ratio: attr(width) / attr(height);
+}
+
 a {
     text-decoration: none;
     color: inherit;
