--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2080,6 +2080,15 @@ select {
         grid-row: auto;
     }
     
+    .experience-card--featured .experience-card__image {
+        min-height: 300px;
+    }
+    
+    .nav__logo-img {
+        width: 50px;
+        height: 50px;
+    }
+    
     .formules__grid {
         grid-template-columns: 1fr;
         max-width: 400px;
